# park-it

./: .gitignore  404.html  MANIFEST.in  README.md  gen_docs.py  index.html  justfile  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy-docs.yml  publish-pypi.yml  test.yml  update-readme.yml
cli/: index.html
docs/: cli.md  gmail-setup.md  model-gen.md
gmail-setup/: index.html
model-gen/: index.html
reference/AppConfig/: index.html
reference/ImageFile/: index.html
reference/SUMMARY/: index.html
reference/SpaceConfig/: index.html
reference/build_app/: index.html
reference/space_update/: index.html
search/: search_index.json
src/park_it/: __init__.py  __main__.py  cli.py
src/park_it/app/: build_app.py  dependencies.py  utils.py
src/park_it/app/routes/: space.py  waitlist_form.py
src/park_it/example/: .env.example  .gitignore  app-config.yaml  mkdocs.yml  server_example.py
src/park_it/mkdocs_abuse/: plugin.py
src/park_it/mkdocs_abuse/assets/: park-it.css  theme-tweaks.css
src/park_it/mkdocs_abuse/templates/: _waitlist_form.html.j2  app.md.j2  pi_app.html.j2  pi_base.html.j2
src/park_it/models/: app_config.py  field_types.py  nwave_parking_sensor.py  space.py  space_update.py  waitlist.py
src/park_it/services/: job_scheduler.py  sse_handler.py  waitlist_service.py
src/park_it/services/db/: database.py  space_state_db.py  space_usage_db.py  waitlist_db.py
src/park_it/services/email/: build_email.py  emailer.py  gmailer.py
src/park_it/templates/email/: _salutation.md.j2  join_confirm.md.j2  leave_confirm.md.j2  space_free.md.j2  space_occupied.md.j2
src/park_it/templates/site/: space_states.html.j2  waitlist_response.html.j2
tests/: __init__.py  conftest.py  mock_updater_client.py  publish_test.py  test_build_app.py  test_build_email.py  test_space_routes.py  test_space_state_db.py  test_space_usage_db.py  test_sse_handler.py  test_utils.py  test_waitlist_db.py  test_waitlist_service.py
