[project]
name = "park-it"
dynamic = ["version"]
description = "A lightweight framework for rapidly building parking space monitor web apps using inductive car sensors. Built on Mkdocs-Material, implemented as a Mkdocs plugin."
readme = "README.md"
authors = [
    { name = "joshhubert-dsp", email = "102703352+joshhubert-dsp@users.noreply.github.com" },
]
license-files = ["LICENSE"]
requires-python = ">=3.11, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "apscheduler>=3.11.2",
    "devtools>=0.12.2",
    "fastapi>=0.129.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mistune>=3.2.0",
    "mkdocs-material>=9.7.1",
    "pillow>=12.1.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "sqlmodel>=0.0.33",
    "sse-starlette[uvicorn]>=3.3.3",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.5.0",
]
dev = [
    { include-group = "test" },
    "google-api-python-client-stubs>=1.32.0",
    "ipython>=9.10.0",
]
docs = [
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-typer2>=0.2.0",
    "mkdocstrings-python>=2.0.2",
]

[project.scripts]
park-it = "park_it.cli:app"

[project.entry-points."mkdocs.plugins"]
park-it = "park_it.mkdocs_abuse.plugin:ParkItPlugin"

[project.urls]
Repository = "https://github.com/joshhubert-dsp/park-it"
Issues = "https://github.com/joshhubert-dsp/park-it/issues" 
Documentation = "https://joshhubert-dsp.github.io/park-it"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[tool.setuptools.package-data]
park_it = [
    "app/templates/**/*", 
    "mkdocs_abuse/**/*", 
    "example/**/*",
    "example/.gitignore",
]

[tool.pytest.ini_options]
env = ["PARK_IT_WAITLIST_PASSWORD=password", "DEBUG_EMAILER=1"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
fixable = ["ALL"]
ignore = [
    "E501",
    "B008",
]

[tool.pyright]
typeCheckingMode = "standard"
reportAny = false
reportUnknownVariableType = false
reportMissingImports = false
pythonVersion = "3.11"

